<resources>
    <string name="app_name">Persona</string>
    <string name="back_to_main">العودة إلى الرئيسية</string>
    <string name="show_result">  أظهر النتيجة</string>
    <string name="other_still_in_quiz">ما زال %1$s في الاختبار</string>
    <string name="confirm">  الغاء الإختبار والعودة إلى الرئيسية</string>
    <string name="yes">نعم </string>
    <string name="no">لا </string>
    <string name="done">تم </string>
    <string name="okay">حسنًا </string>
    <string name="ok">Okay</string>
    <string name="nameMustBeLonger">الاسم الجديد يجب أن يكون أكثر من حرفين</string>
    <string name="testCancelled">تم إلغاء الاختبار</string>
    <string name="tryAgain">المحاولة مرة أخرى </string>
    <string name="restart">إعادة التحميل </string>
    <string name="connectedNow">تم الإتصال</string>
    <string name="noConnection">لا يوجد إتصال </string>
    <string name="noConnectionTitle">هذه الخاصيّة تتطلب الإنترنت، الرجاء تمكين الشبكة للدخول ❗</string>
    <string name="available">متاح </string>
    <string name="unavailable">غير متاح </string>
    <string name="quiz_exists">لقد أنشئتَ اختبارًا بالفعل</string>
    <string name="progress_string">%1$s/20</string>
    <string name="NewTestAndUsersCounter">اختبار جديد (المستخدمين %1$d )</string>
    <string name="no_quizzes_available">لا يوجد أي اختبار متاح حاليًا، شارك التطبيق مع أصدقائك 😊</string>
    <string name="removeCurrentTest">حذف الاختبار الحالي</string>
    <string name="newTest">اختبار جديد</string>
    <string name="changeName">تغيّير الاسم</string>
    <string name="privacyPolicy">سياسة الخصوصيّة</string>
    <string name="moreApps">المزيد من التطبيقات</string>
    <string name="mainFourTests">الاختبارات الأساسيّة الأربعة</string>
    <string name="specialTests">الاختبارات المميّزة</string>
    <string name="changeLanguage">العربيّة</string>
    <string name="cancel">إلغاء</string>
    <string name="enterNewName">أدخل الاسم الجديد</string>
    <string name="nameChanged">تم تغيير الاسم </string>
    <string-array name="results">

        <item>كلاكما يفكر بمنطقية وجدية، ومن بعض ما يميزكم الهدوء وقلة الكلام، والواقعية والوضوح شيئان كلاكما يهتم فيه. الاحترام أهم من التقدير واللباقة مفهوم مهم في نظركم. وأيضًا الأفكار قد تأخذكم إلى خيال وأماكن بعيدة وأحيانًا ما تستمعان بالحديث عن الفرص والقدرات</item>

        <item>مثاليًا قد يعتقد أحدكم أن الآخر لطيف جدًا، قراراتكم مبنية حسب تأثيرها على من حولكم، وعند كل قرار أحدكما يتخذه قد يراجع مبادئه كي يتشجع أكثر. أحيانًا يكون التخطيط شاقًا وليس شيقًا لكن هذا قد يكون دليلًا على أنكم تعيشون في الحاضر</item>

        <item>يبدو وكأن نقاط التشابه بينكما قليلة، قد يتكلم واحد منكم كثيرًا ويستمع الآخر بدل الرد، قد يعجب أحدكما التخطيط والآخر لا. لكنّ دخولكما إلى هنا لأخذ هذا الاختبار يعني أن بينكما تشابه كبير وقد لم نتمكن بهذا الاختبار البسيط والقصير توضيح هذا التشابه</item>

        <item>أنتما رائعين فعلًا. ليس هناك مانع للضحك في أي وقت، وعند الأزمات قد يفكر أحدكم بشكل سريع ويستبق الأحداث. التجوال والسفر قد يكون أحيانًا مرهقًا لكنه يساعد كثيرًا في سعادتكما. هذا ليس كل شيء بل هناك الكثير لكن الأفضل أن تظلّا أصدقاء رائعين</item>

    </string-array>
    <string-array name="online_questions">
        
        <item> أنت ملك وقد تعرّضت مملكتك لنهب بعض ممتلكاتها</item>
        <item>عندما يقول أحدهم عمري ثلاثين عامًا</item>
        <item>اختر أفضل ما يناسبك</item>
        <item>ما نسبة اتفاقك مع العادات والتقاليد في مجتمعك؟</item>
        <item>اختر أفضل ما يناسبك</item>
        <item>يعتبرك من حولك </item>
        <item>تنتظر في صف طويل </item>
        <item>ستذهب في رحلة إلى أوروبا</item>
        <item>واجباتك ومشاريعك أفضل إذا </item>
        <item>أنت مدير شركة هدفها الأسمى </item>
        <item>أكثر صفة تود تطويرها في نفسك</item>
        <item>في رأسك يوميًا </item>
        <item>بالنسبة لك، الأمر الأسهل عند شراء حاجة ما هو </item>
        <item>من أولوياتك إرجاع الأشياء إلى أماكنها بعد استخدامها، كم نسبة اتفاقك؟</item>
        <item>اصطدمت بشخص وكان لك موقف سيء معه مسبقًا </item>
        <item>تعتقد أنك ستكون في مهنتك أفضل إذا كانت</item>
        <item>غالبًا ما تُجيب أسئلة استطلاع الرأي بسرعة وبدون قراءة</item>
        <item>كيف تحب أخذ ملاحظاتك في الجامعة/المدرسة؟</item>
        <item>حياتيًا، تعتبر نفسك </item>
        <item>أخيرًا، رأيك في هذا الاختبار ؟ </item>
    </string-array>
    <string-array name="online_question_answers">
        
        <item>أدافع عن مملكتي بردّ العدو</item>
        <item>أصد الهجوم و أهاجم المعتدين</item>
        <item>أنسحب من تلك الأرض</item>
        <item>أنا ملك وعندي مشاغل أهم</item>

        <item>يقصد أنه سيعيش ثلاثون عامًا </item>
        <item>اليوم عيد ميلاده الواحد والثلاثون</item>
        <item>اليوم عيد ميلاده الثلاثين</item>
        <item>مضى من عمره ثلاثون عامًا</item>

        <item> قلّ ما تكذب</item>
        <item>لا يمكنك المجاملة</item>
        <item>تكذب أحيانًا لكن لكي تضحك غيرك</item>
        <item>تعتبر نفسك صادق للغاية</item>

        <item>صفر بالمئة</item>
        <item>%15 إلى 35%</item>
        <item>أكره العادات والتقاليد</item>
        <item>70% وأكثر</item>

        <item> تحاول أن يكون عندك أكثر من وجهة نظر لموضوع ما</item>
        <item>تحب أن تعرف كل شيء يدور ويحدث حولك</item>
        <item>تتأكد من المعلومات ولا تضع افتراضات كثيرة</item>
        <item>في الأماكن المزدحمة تشعر بالضيق</item>

        <item>لا تشارك الكثير من تفاصيل حياتك</item>
        <item>تتحدث كثيرًا عن حياتك</item>
        <item>ليس حولي أحد</item>
        <item>حسب من حولي</item>

        <item>تخرج هاتفك وتتصفّح الانترنت</item>
        <item>لا تخرج هاتفك لأنه في يدك أصلًا</item>
        <item>تراقب من حولك دون تعقيب لكلام أحد</item>
        <item>تدردش مع من هم حولك</item>

        <item>تسافر وتتجول دون تخطيط مسبق</item>
        <item>تخطط أي مواقع أثرية سوف تزور </item>
        <item>لا تسافر وتلغي الرحلة في آخر لحظة</item>
        <item>تبحث عن أحد ليسافر معك</item>

        <item>أتممتها مع زملاء لك</item>
        <item>أنجزتها لوحدك</item>
        <item>لم تكن موجودة</item>
        <item>لم تنجزها إطلاقًا</item>

        <item>دعم التقاليد والثقافات الاجتماعية</item>
        <item>الإبداع </item>
        <item>تغيير المستقبل</item>
        <item>مساعدة البشرية</item>

        <item>المجادلة وإقناع الآخرين</item>
        <item>زيادة اعجاب الناس بي</item>
        <item>الثقة بالنفس</item>
        <item>أقلل من ضغوطات حياتي</item>

        <item>1000 فكرة</item>
        <item>أفكار قليلة </item>
        <item>رأسي فارغ</item>
        <item>النوم والأكل وبعض الدراسة </item>

        <item>اختيار أفضل سلعة</item>
        <item>دفع المال</item>
        <item>لا أشتري أي شيء</item>
        <item>الاستمتاع بما تشتري</item>

        <item>صفر بالمئة</item>
        <item>%15 إلى 35%</item>
        <item>بلا إجابة</item>
        <item>70% وأكثر</item>

        <item>تعتقد أنه تعمّد ذلك</item>
        <item>تتجاهله وتمضي قُدمًا</item>
        <item>تتشاجر معه</item>
        <item>ليس عندي مواقف سيئة مع أحد</item>

        <item>تحتاج حركة كثيرة وتفكيرًا أقل</item>
        <item>تتطلب الجلوس في مكتب طوال اليوم</item>
        <item>تتفاعل فيها مع البشر كثيرًا</item>
        <item>سهلة ومريحة</item>

        <item>نعم</item>
        <item>نادرًا</item>
        <item>أبدًا</item>
        <item>لم يسبق لي إجابة أسئلة من هذا النوع</item>

        <item>العنوان ثم أفكار مندرجة حسب الحاجة</item>
        <item>قل ما أكتب أي شيء</item>
        <item>كل شيء بتسلسل ثابت</item>
        <item>أكتب كل ما يُكتب </item>

        <item>قادرًا على تغيير العالم</item>
        <item>ساعيًا لأي شيء قد يجلب السعادة</item>
        <item>ذو ضغوطات ومشاكل التزامية كثيرة </item>
        <item>إنسانًا رائعًا </item>

        <item>الأسئلة كثيرة ومملة وطويلة</item>
        <item>اختبار رائع </item>
        <item>بعض الأسئلة فريدة وبعضها بلا مغزى</item>
        <item>اختبار فاشل(لا أعرف كيف أنهيته)</item>

    </string-array>
</resources>